--- a/Nov22_Assignment/RPG_shopsystem/RPG_shopsystem/RPG_shopsystem.vcxproj.filters
+++ b/Nov22_Assignment/RPG_shopsystem/RPG_shopsystem/RPG_shopsystem.vcxproj.filters
@@ -37,7 +37,7 @@
       <Filter>Source Files\Inventory</Filter>
     </ClCompile>
     <ClCompile Include="Store.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Store</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
