--- a/Nov22_Assignment/RPG_shopsystem/RPG_shopsystem/RPG_shopsystem.vcxproj
+++ b/Nov22_Assignment/RPG_shopsystem/RPG_shopsystem/RPG_shopsystem.vcxproj
@@ -44,6 +44,13 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
+    <CustomCommands>
+      <CustomCommands>
+        <Command>
+          <type>Build</type>
+        </Command>
+      </CustomCommands>
+    </CustomCommands>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
